# Lumen

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  PKGBUILD  README.md  lumen.bat  lumen.sh  start_lumen.sh  tree.txt
.github/workflows/: release.yml  test.yml
core/: Cargo.toml
core/src/: auth.rs  ffi.rs  import_stoic.rs  lib.rs  paths.rs  progress.rs
core/src/entry/: encryption.rs  mod.rs  recurring.rs
core/src/plugins/: loader.rs  manifest.rs  mod.rs  plugin_trait.rs
core/src/plugins/builtin/: daily_summary.rs  export_md.rs  mod.rs  wordcount.rs
core/src/storage/: mod.rs  schema.rs
core/src/sync/: local_sqlite.rs  mod.rs
docs/: architecture.md  core.md  plugins.md  roadmap.md  stoic-export-format.md  storage.md  tui.md
lumen/core/: Cargo.toml  lib.rs
lumen/core/entry/: encryption.rs  mod.rs
lumen/core/feedback/: mod.rs
lumen/core/plugins/: mod.rs
lumen/core/src/: ffi.rs  lib.rs
lumen/core/src/entry/: encryption.rs  mod.rs
lumen/core/src/feedback/: mod.rs
lumen/core/src/plugins/: mod.rs
lumen/core/src/storage/: mod.rs
lumen/core/storage/: mod.rs
lumen/tui/: lumen_tui.rs
lumen/ui/: ffi_bridge.dart  main.dart  pubspec.yaml
lumen/ui/lib/: ffi_bridge.dart  main.dart
lumen/ui/lib/screens/: entry_view_screen.dart  journal_list_screen.dart
lumen/ui/linux/: CMakeLists.txt
lumen/ui/linux/runner/: my_application.cc
lumen/ui/screens/: journal_list_screen.dart  plugin_config_screen.dart
package/: LICENSE  Lumen  README.md
package/data/flutter_assets/: NOTICES.Z  version.json
plugins/example_plugin/: Cargo.toml  plugin.toml
plugins/example_plugin/src/: lib.rs
scripts/: build_linux.sh  build_macos.sh  build_windows.bat  build_windows.sh  lumen.iss  release.sh  sync.sh
tools/: bump-version.sh  release-lumen.sh  tree.txt
tui/: Cargo.toml  lumen_tui.rs
tui/src/: main.rs
ui/: ffi_bridge.dart  pubspec.yaml
ui/lib/: main.dart
ui/lib/core/: lumen_core.dart  providers.dart
ui/lib/l10n/: app_en.arb  app_es.arb  app_fr.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_fr.dart
ui/lib/screens/: board_screen.dart  entry_view_screen.dart  export_import_screen.dart  home_screen.dart  journal_list_screen.dart  lock_screen.dart  mind_screen.dart  new_entry_screen.dart  note_list_screen.dart  plugin_config_screen.dart  project_detail_screen.dart  project_list_screen.dart  quick_note_screen.dart  search_results_screen.dart  settings_screen.dart  setup_screen.dart  stoic_import_screen.dart  sync_settings_screen.dart  task_list_screen.dart
ui/lib/utils/: frontmatter.dart  id_utils.dart  journal_prompts.dart  responsive.dart  theme.dart  wiki_links.dart
ui/lib/widgets/: empty_state.dart  entry_card.dart  error_banner.dart  gantt_chart.dart  loading_spinner.dart  lumen_shell.dart  new_entry_button.dart  quick_add_bar.dart  status_badge.dart  streak_widget.dart  vault_switcher.dart
ui/linux/: CMakeLists.txt
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/test/: widget_test.dart
ui/windows/: CMakeLists.txt
(+9 files in other folders)
