[package]
name = "lumen"
version = "1.1.25"
edition = "2024"

[lib]
name = "lumen_core"
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
lazy_static = "1.4"
serde_json = "1"
base64 = "0.21"
