[package]
name = "lumen"
version = "1.1.29"
edition = "2021"   # 2024 is not a valid Rust edition (yet)

[lib]
name = "lumen_core"
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
lazy_static = "1.4"
serde_json = "1"
base64 = "0.21"
dirs = "6.0"
rusqlite = { version = "0.34", features = ["bundled"] }
bincode = "1.3"
libloading = "0.8"
toml = "0.8"
