[package]
name = "lumen-tui"
version = "2.2.3"
edition = "2021"

[[bin]]
name = "lumen"
path = "lumen_tui.rs"

[dependencies]
lumen = { path = "../core" }
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
dirs = "6.0"
rusqlite = { version = "0.34", features = ["bundled"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
