[package]
name = "lumen-tui"
version = "2.2.3"
edition = "2021"

[[bin]]
name = "lumen"
path = "lumen_tui.rs"

[dependencies]
lumen_core = { path = "../core", package = "lumen" }
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
dirs = "6.0"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
