[package]
name = "lumen-tui"
version = "2.3.3"
edition = "2021"

[[bin]]
name = "lumen"
path = "src/main.rs"

[dependencies]
lumen_core = { path = "../core", package = "lumen" }
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
dirs = "6.0"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
ratatui = "0.26"
crossterm = { version = "0.28", features = ["events"] }
color-eyre = "0.6"
termimad = "0.30"
